[gd_scene load_steps=4 format=3 uid="uid://classeditscn"]

[ext_resource type="Script" uid="uid://cd1pndcbsnlpq" path="res://addons/nodescript/ui/class_editor.gd" id="1"]
[ext_resource type="Theme" uid="uid://bbkufuj4lk7no" path="res://addons/nodescript/ui/styling/node_script_styling.tres" id="2_uktip"]
[ext_resource type="PackedScene" uid="uid://orgselector" path="res://addons/nodescript/ui/org_selector.tscn" id="3"]

[node name="ClassEditor" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(0, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_uktip")
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_uktip")

[node name="VBox" type="VBoxContainer" parent="Margin"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_uktip")
theme_override_constants/separation = 8

[node name="Panel" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_uktip")
theme_type_variation = &"panel_header"

[node name="Header" type="HBoxContainer" parent="Margin/VBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_uktip")
alignment = 1

[node name="HeaderIcon" type="TextureRect" parent="Margin/VBox/Panel/Header"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("2_uktip")
expand_mode = 0
stretch_mode = 3
size_flags_horizontal = 0

[node name="HeaderLabel" type="Label" parent="Margin/VBox/Panel/Header"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_uktip")
theme_type_variation = &"panel_header_text"
text = "Class"
horizontal_alignment = 1

[node name="Form" type="GridContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_uktip")
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 2

[node name="NameLabel" type="Label" parent="Margin/VBox/Form"]
layout_mode = 2
theme = ExtResource("2_uktip")
text = "Name"

[node name="ClassName" type="LineEdit" parent="Margin/VBox/Form"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_uktip")
placeholder_text = "MyInnerClass"

[node name="ExtendsLabel" type="Label" parent="Margin/VBox/Form"]
layout_mode = 2
theme = ExtResource("2_uktip")
text = "Extends"

[node name="ExtendsEdit" type="LineEdit" parent="Margin/VBox/Form"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_uktip")
placeholder_text = "Node"

[node name="OrgSelector" parent="Margin/VBox" instance=ExtResource("3")]

[node name="Spacer" type="Control" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_uktip")

[node name="SignaturePanel" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_uktip")
theme_type_variation = &"panel_header"

[node name="SignatureHeader" type="HBoxContainer" parent="Margin/VBox/SignaturePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_uktip")
theme_override_constants/separation = 6
alignment = 1

[node name="SignatureIcon" type="TextureRect" parent="Margin/VBox/SignaturePanel/SignatureHeader"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("2_uktip")
expand_mode = 0
stretch_mode = 3
size_flags_horizontal = 0

[node name="SignatureLabel" type="Label" parent="Margin/VBox/SignaturePanel/SignatureHeader"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_uktip")
theme_type_variation = &"panel_header_text"
text = "Class Declaration"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SignaturePreview" type="Label" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_uktip")
text = "class MyInnerClass:"

[node name="Buttons" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_uktip")
theme_override_constants/separation = 8

[node name="Spacer" type="Control" parent="Margin/VBox/Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Delete class"
focus_mode = 0
theme = ExtResource("2_uktip")
text = "Delete"

[node name="ConfirmButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Save class"
focus_mode = 0
theme = ExtResource("2_uktip")
text = "Save Class"
